# src/models/Address.ts
@@ -1,0 +1,16 @@
+
+export interface Address {
+    ID?: string
+    DateCreated?: string
+    CompanyName?: string
+    FirstName?: string
+    LastName?: string
+    Street1?: string
+    Street2?: string
+    City?: string
+    State?: string
+    Zip?: string
+    Country?: string
+    Phone?: string
+    AddressName?: string
+}
