# src/models/BuyerAddressXP.ts
@@ -3,4 +3,5 @@ export interface BuyerAddressXP {
     Accessorials?: 'DestinationInsideDelivery' | 'DestinationLiftGate' | 'LimitedAccessDelivery' | 'ResidentialDelivery'
     Email?: string
     AvalaraCertificateID?: number
+    AvalaraCertificateExpiration?: string
 }
