# src/models/CreditCardToken.ts
@@ -1,7 +1,9 @@
+import { Address } from './Address';
 
 export interface CreditCardToken {
     AccountNumber?: string
     ExpirationDate?: string
     CardholderName?: string
     CardType?: string
+    CCBilingAddress?: Address
 }
